--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "new-folder-(2)",
-  "version": "1.0.0",
-  "main": "app.js",
+ "engines": {
+  "node": "v22.11.0"
+ },
+ "name": "mental-health-app",
+ "version": "1.0.0",
+ "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "body-parser": "^2.2.0",
-    "dotenv": "^17.2.2",
+    "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-ejs-layouts": "^2.5.1",
@@ -22,5 +25,6 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "socket.io": "^4.8.1"
-  }
+  },
+  "description": ""
 }
